<resources>
    <string name="app_name">Wastify</string>

    <string name="menu_title_home">Home</string>
    <string name="menu_title_explore">Explore</string>

    <string name="welcome_to_wastify">Welcome to Wastify</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="app_guide">App Guide</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="waste_categories">Waste Categories</string>
    <string name="category">Category</string>
    <string name="category_detail">Category Detail</string>
    <string name="waste_category">Waste Category</string>
    <string name="waste_identified">Waste Identified</string>
    <string name="waste_category_details">Waste Category Details</string>
    <string name="categories_found">Categories Found</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="identify">Identify</string>
    <string name="next">Next</string>
    <string name="capture_and_identify">Capture and Identify</string>
    <string name="previous">Previous</string>
    <string name="learn_and_take_action">Learn and Take Action</string>
    <string name="get_started">Get Started</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="save_result">Save Result</string>
    <string name="info">info</string>
    <string name="storage">Storage</string>
    <string name="waste_type_detail">Waste Type Detail</string>
    <string name="disposal_methods">Disposal Methods</string>
    <string name="waste_disposal_locations">Waste Disposal Locations</string>
    <string name="related_articles">Related Articles</string>
    <string name="article">Article</string>
    <string name="article_detail">Article Detail</string>
    <string name="article_image">Article Image</string>
    <string name="result">Result</string>
    <string name="date">Date</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="go_to_history_page">Go to History Page</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="click_here">Click Here</string>
    <string name="send">Send</string>
    <string name="gallery">Gallery</string>
    <string name="shutter">Shutter</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="tab_layout_history">Tab Layout History</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="update_profile">Update Profile</string>
    <string name="auth">Auth</string>
    <string name="no_data">No Data</string>
    <string name="no_saved_articles">No Saved Articles</string>
    <string name="no_waste_identifications">No Waste Identifications</string>
    <string name="type">Type</string>
    <string name="recyclable">Recyclable</string>
    <string name="ml_result">ML Result</string>
    <string name="waste_types">Waste Types</string>
    <string name="save_profile">Save Profile</string>
    <string name="dot">dot</string>
    <string name="ok">OK</string>
    <string name="user_stats">User Stats</string><string name="show_my_location">Show My Location</string>
    <string name="more_accurate_result">More Accurate Result</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="tab_layout_bookmarks">Tab Layout Bookmarks</string>
    <string name="result_percentages">Result Percentages</string>
    <string name="result_accuracy">Result Accuracy</string>
    <string name="save_this_result">Save this result</string>

    <string name="msg_fill_register_data">Please create an account before you start.</string>
    <string name="msg_fill_login_data">Please log in with the account you have registered.</string>
    <string name="msg_have_account">Already have an account?</string>
    <string name="msg_have_no_account">Don\'t have an account?</string>
    <string name="msg_field_required">This field is required</string>
    <string name="msg_login_success">Login Successful</string>
    <string name="msg_passwords_not_match">Passwords do not match</string>
    <string name="msg_input_valid_email">Please input a valid email address</string>
    <string name="msg_register_success">Account Has Been Created Successfully</string>
    <string name="msg_identify_waste">Let\'s identify your waste!</string>
    <string name="msg_first_on_boarding">Start your waste management journey with Wastify, the app that helps you identify and manage different types of waste through image recognition.</string>
    <string name="msg_second_on_boarding">Simply snap a picture of any waste item, and our image recognition technology will identify its type.</string>
    <string name="msg_third_on_boarding">Dive into our comprehensive waste category database to learn more about various waste types, their environmental impact, and how to dispose of them properly.</string>
    <string name="msg_logout">Are you sure want to log out of this account?</string>
    <string name="msg_loading">Please wait…</string>
    <string name="msg_ask_forgot_password">Forgot your password?</string>
    <string name="msg_enter_email_verification">Please enter your email for the verification process.</string>
    <string name="msg_make_sure_center">Please make sure the trash is\nin the center of the green box.</string>
    <string name="msg_fail_show_camera">Failed to show camera.</string>
    <string name="msg_error_camera_access">Can\'t access camera. Check your permissions for this app.</string>
    <string name="msg_fail_capture_photo">Failed to capture photo</string>
    <string name="msg_choose_picture">Choose a picture</string>
    <string name="msg_ask_change_profile">Are you sure want to change your profile data?</string>
    <string name="msg_profile_updated">Profile updated successfully.</string>
    <string name="msg_no_data_changed">No data changed</string>
    <string name="msg_start_save_article">You can start saving interesting articles\nby tapping the Bookmark Icon\nin the right in the article details page</string>
    <string name="msg_start_identify">You can start identify your waste\nby clicking the Identify Button\nin home page bottom bar</string>
    <string name="msg_turn_on_gps">Turn on your gps to show your location on map</string>
    <string name="msg_error_waste_disposal_location">Can\'t show waste disposal location.</string>
    <string name="msg_feature_under_development">Feature under development</string>
    <string name="msg_more_accurate">Adjust the position of the waste/object to the center of the screen, and make sure to do one piece of waste so that the results are more accurate.</string>
    <string name="msg_stats_rules">This statistics only applies to the saved identification results.</string>
    <string name="msg_activate_gps">Activate your gps, and click the top right button in the map to jump to your current location</string>
    <string name="msg_article_saved">Article added to bookmarks.</string>
    <string name="msg_article_deleted">Article deleted from bookmarks.</string>
    <string name="msg_error_location_access">Can\'t access your location. Check your permissions for this app</string>

    <string name="value_full_name">Hello, %s</string>
    <string name="value_categories_found">%s/8</string>

    <string name="dummy_greetings_name">Hello, Alexander Jamal</string>
    <string name="dummy_total_waste_identified">0</string>
    <string name="dummy_total_categories_found">0/8</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="dummy_article_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummy_article_source">Google News</string>
    <string name="dummy_article_date">May 31, 2023</string>
    <string name="dummy_result_date">April 29, 2023</string>
    <string name="dummy_category">Plastic</string>
    <string name="dummy_location_name">TPS 3R Rawasari</string>
    <string name="dummy_location_address">Jl. Rawa Kerbau No. 5A, Jl. Rawasari Sel. No.RT.16, RT.16/RW.2, Cemp. Putih Tim., Kec. Cemp. Putih, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10510</string>
    <string name="dummy_waste_type">Inorganic</string>
    <string name="msg_result_saved">Result saved to bookmarks</string>
    <string name="msg_no_saved_results">No Saved\nIdentification Results</string>
    <string name="msg_save_result">You can save your waste identification result\nby clicking the save button in the result page</string>
    <string name="msg_remove_result">Remove result from bookmarks</string>
    <string name="msg_remove_result_success">Result removed from bookmarks</string>

</resources>