<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.home.ArticleDetailFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back_filled_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/article_detail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <ImageView
        android:id="@+id/iv_waste"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/article_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_app_bar"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <TextView
        android:id="@+id/tv_article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_waste"
        tools:text="@string/dummy_article_title" />

    <TextView
        android:id="@+id/tv_article_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="6dp"
        android:background="@drawable/custom_card_rounded_filled_primary"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_article_title"
        tools:text="@string/dummy_article_source" />

    <TextView
        android:id="@+id/tv_article_published_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_article_source"
        app:layout_constraintBottom_toBottomOf="@id/tv_article_source"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/dummy_article_date"/>

    <TextView
        android:id="@+id/tv_article_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_article_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/dummy_description" />

</androidx.constraintlayout.widget.ConstraintLayout>