<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.home.CategoryDetailFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back_filled_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/category_detail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_category"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/waste_category"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_app_bar"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/custom_card_rounded_filled_primary"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_category" />

    <TextView
        android:id="@+id/tv_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_name" />

    <TextView
        android:id="@+id/tv_category_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_description"
        app:layout_constraintEnd_toEndOf="@id/tv_title_description"
        app:layout_constraintTop_toBottomOf="@id/tv_title_description"
        tools:text="@string/dummy_description"/>

    <TextView
        android:id="@+id/tv_title_methods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/disposal_methods"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_methods" />

</androidx.constraintlayout.widget.ConstraintLayout>