<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_illustration"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/auth"
            android:scaleType="centerCrop"
            android:src="@drawable/auth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- FORM TITLE -->
        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_illustration" />

        <!-- FORM SUBTITLE -->
        <TextView
            android:id="@+id/tv_subtitle_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_fill_register_data"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_register" />

        <!-- TEXT FIELD FULL NAME -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/full_name"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_register"
            app:startIconDrawable="@drawable/ic_person_filled_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TEXT FIELD EMAIL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_full_name"
            app:startIconDrawable="@drawable/ic_email_filled_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TEXT FIELD PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_email"
            app:startIconDrawable="@drawable/ic_lock_filled_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TEXT FIELD CONFIRM PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_password"
            app:startIconDrawable="@drawable/ic_lock_filled_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- BUTTON REGISTER -->
        <Button
            android:id="@+id/btn_register"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_confirm_password" />

        <!-- MESSAGE HAVE ACCOUNT -->
        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/msg_have_account"
            app:layout_constraintEnd_toStartOf="@id/btn_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <!-- BUTTON LOGIN -->
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_have_account"
            app:layout_constraintTop_toTopOf="@id/tv_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>