<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.bookmarks.SavedArticlesFragment">

    <!-- IMAGE ILLUSTRATION -->
    <ImageView
        android:id="@+id/iv_illustration"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/no_data"
        android:src="@drawable/empty"
        app:layout_constraintBottom_toTopOf="@id/tv_title_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- TEXT TITLE NO DATA -->
    <TextView
        android:id="@+id/tv_title_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no_saved_articles"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_desc_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_illustration" />

    <!-- TEXT DESCRIPTION NO DATA -->
    <TextView
        android:id="@+id/tv_desc_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/msg_start_save_article"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_no_data" />

</androidx.constraintlayout.widget.ConstraintLayout>